--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -3,19 +3,35 @@ name: feature
 on:
   workflow_dispatch:
 
+env:
+  NODE_VERSION: '14.x'
 
 jobs:
-  deploy:
-    name: Deploy
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    environment: demo
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Change Request in ServiceNow
-        run : echo "Change Request approved in ServiceNow"
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
 
-      - name: Run Deployment
-        run: echo "Deployment Finished...."
+      - name: npm install, build, and test
+        run: |
+             npm install
+             npm run clean
+             npm run build --if-present
+             npm run test --if-present && npm run junitxml
+        
+      - name: Zip artifact for deployment
+        run: zip release1.zip ./* -r
+        
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: node-app
+          path: release1.zip
