--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -6,8 +6,6 @@ on:
 env:
   NODE_VERSION: '14.x'
 
-permissions:
-  contents: read
 
 jobs:
   build:
@@ -38,3 +36,23 @@ jobs:
         with:
           name: node-app
           path: release1.zip
+          
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Custom Change
+        uses: ServiceNow/servicenow-devops-change@v1.34.2
+        with:
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          context-github: ${{ toJSON(github) }}
+          job-name: 'Deploy'
+          change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed."}}'
+          interval: '100'
+          timeout: '3600'
+          
+      - name: Run deployment scripts
+        run: echo Completed Deployment.
