--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -40,6 +40,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Custom Change
         uses: ServiceNow/servicenow-devops-change@v1.34.2
