--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -41,7 +41,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build
-    environment: PROD
+    environment: demo
     steps:
       - name: Run deployment scripts
         run: echo Completed Deployment.
