--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -37,10 +37,29 @@ jobs:
           name: node-app
           path: release1.zip
           
+  createchange:
+    name: Create Change
+    needs: build
+    runs-on: ubuntu-latest
+    steps:     
+      - name: ServiceNow Change
+        uses: velivalab/servicenow-devops-change@master
+        with:
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          context-github: ${{ toJSON(github) }}
+          job-name: 'Deploy'
+          change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
+          interval: '100'
+          timeout: '3600'
+          child-workflow-id: '3600'
+          
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: createchange
     environment: demo
     steps:
       - name: Run deployment scripts
