--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -53,7 +53,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: createchange
-    environment: demo
+    environment: test
     steps:
       - name: Run deployment scripts
         run: echo Completed Deployment.
