--- a/.github/workflows/dg_demo.yml
+++ b/.github/workflows/dg_demo.yml
@@ -29,8 +29,8 @@ jobs:
              npm run test --if-present && npm run junitxml
    
    
-  crattributes:
-    name: Change Request Attributes
+  change:
+    name: Change Request
     needs: build
     runs-on: ubuntu-latest
     steps:     
@@ -42,7 +42,7 @@ jobs:
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
-          job-name: 'Change Request Attributes'
+          job-name: 'Change Request'
           change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
           interval: '100'
           timeout: '3600'
@@ -52,7 +52,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: crattributes
+    needs: change
     environment: demo
     steps:
       - name: Run deployment scripts
