--- a/.github/workflows/dg_demo_1.yml
+++ b/.github/workflows/dg_demo_1.yml
@@ -11,6 +11,7 @@ jobs:
   change:
     name: Change Request
     runs-on: ubuntu-latest
+    environment: demo
     steps:     
       - name: ServiceNow DevOps Change Attributes
         uses: velivalab/servicenow-devops-change@deploymentgate
