--- a/.github/workflows/dg_demo_2.yml
+++ b/.github/workflows/dg_demo_2.yml
@@ -10,9 +10,8 @@ env:
 jobs:
   deployment:
     runs-on: ubuntu-latest
-    environment: 
-      name: demo
-      url: https://github.com
+    env:
+      change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.","backout_plan":"When software fails in production, the previous software release will be re-deployed.","test_plan":"Testing if the software was successfully deployed"}}'
     steps:
       - name: deploy
         run: echo Deployment Started
