--- a/.github/workflows/CI-nodejs.yml
+++ b/.github/workflows/CI-nodejs.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:     
       - name: ServiceNow DevOps Change
-        uses: ServiceNow/servicenow-devops-change@v3.0.0
+        uses: ServiceNow/servicenow-devops-change@v2.0.0
         with:
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
@@ -47,6 +47,9 @@ jobs:
           interval: '100'
           timeout: '3600'
           child-workflow-id: '3600'
+          changeCreationTimeOut: '3600'
+          abortOnChangeCreationFailure: true
+          abortOnChangeStepTimeout: true
 
 
   deploy:
